# Athena

./: .gitignore  LICENSE  README.md  listener.py  main.py  pyproject.toml
src/core/: base_assistant.py
src/llm/: base_llm.py  gemini.py  gemini_llm.py
src/tui/: tui_manager.py
src/voice/recognition/: base_voice.py  vosk_recognizer.py
src/voice/synthesis/: base_voice.py  piper.py
test/: vosk_test.py
